@@ -1185,7 +1185,7 @@ print (t)\
   CFLAGS="${CFLAGS:-%optflags}" ; export CFLAGS; \
   LDFLAGS="${LDFLAGS:-%{-s:-s}}"  ; export LDFLAGS; \
   %{-C:_mydir="`pwd`"; %{-M: %{__mkdir} -p %{-C*};} cd %{-C*}} \
-  dirs="`find ${_mydir} -name configure.in -print`"; export dirs; \
+  dirs="`find ${_mydir} -name 'configure.[ai][cn]' -print`"; export dirs; \
     for coin in `echo ${dirs}` \
 do \
   dr=`dirname ${coin}`; \
@@ -1202,20 +1202,20 @@ else \
         ##  echo "**Warning**: No such directory \`${k}'.  Ignored." \
         fi \
       done \
-      if grep "^AM_GNU_GETTEXT" configure.in >/dev/null; then \
-        if grep "sed.*POTFILES" configure.in >/dev/null; then \
-          : do nothing -- we still have an old unmodified configure.in \
+      if grep "^AM_GNU_GETTEXT" configure.[ai][cn] >/dev/null; then \
+        if grep "sed.*POTFILES" configure.[ai][cn] >/dev/null; then \
+          : do nothing -- we still have an old unmodified configure.[ai][cn] \
         else \
           test -r ${dr}/aclocal.m4 || touch ${dr}/aclocal.m4; \
           echo "no" | gettextize --force --copy; \
           test -r ${dr}/aclocal.m4 && %{__chmod} u+w ${dr}/aclocal.m4; \
         fi \
       fi \
-      if grep "^AM_PROG_LIBTOOL" configure.in >/dev/null; then \
+      if grep "^AM_PROG_LIBTOOL" configure.[ai][cn] >/dev/null; then \
         %{__libtoolize} --force --copy; \
       fi \
       aclocal ${aclocalinclude}; \
-      if grep "^AM_CONFIG_HEADER" configure.in >/dev/null; then \
+      if grep "^AM_CONFIG_HEADER" configure.[ai][cn] >/dev/null; then \
         %{__autoheader}; \
       fi \
       echo "Running automake --gnu ${am_opt} ..."; \
